# zkGirlfriend

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml
app/: Dockerfile  app.py  requirements.txt  web.py
apprs/: Cargo.toml
apprs/src/: main.rs
circuit/: Cargo.toml  Dockerfile
circuit/backend/: Cargo.toml  Dockerfile  abi.json  proof  public_inputs
circuit/backend/src/: main.rs
circuit/lib/: Cargo.toml
circuit/lib/src/: lib.rs
circuit/program/: Cargo.toml
circuit/program/src/: main.rs
circuit/script/: Cargo.toml
contracts/: .gitignore  lcov.info  remappings.txt
contracts/broadcast/deployZK.s.sol/11155111/: run-1723873147.json  run-1723933754.json  run-1723940573.json  run-latest.json
contracts/script/: deployZK.s.sol
contracts/src/: girlfriendBank.sol  girlfriendNFT.sol
contracts/test/: ProofTest.t.sol
