[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
alloy = { version = "0.2", features = ["full"] }
girlfriend-lib = { path = "../lib" }
sp1-sdk = { version = "1.1.0", features = ["network"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5", features = ["trace"] }
